Jann 30/objects/AutoApproverAssignment__c.object
<CustomObject>
    <fields>
        <fullName>ProfitCenterName1__c</fullName>
        <formula>ProfitCenterName__r.ProfitCenterName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProfitCenterName1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitCenterName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profit Center</label>
        <referenceTo>ProfitCenter__c</referenceTo>
        <relationshipLabel>AutoApproverAssignments</relationshipLabel>
        <relationshipName>AutoApproverAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFADoaCategory__c</fullName>
        <description>All the primary DOA categories of RFA</description>
        <label>RFADoaCategory</label>
        <picklist>
            <picklistValues>
                <fullName>1.A.1 Capital Expenditures - Annual Capital Plan Request or Formal Approval of Annual Capital Plan Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.2.a Capital Expenditures - Unbudgeted CPR or SPR Covered by Budget Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.2.b Capital Expenditures - Unbudgeted CPR or SPR Funded Partially or Fully from Corporate Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.3 Capital Expenditures - Increase or Scope Change to Previously Approved CPR or SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.4 Capital Expenditures - Transfer of Capital Budget across Groups for a Previously Approved CPR or SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.5 Capital Expenditures - Foreign Exchange Fluctuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.8 Capital Expenditures - Advance Appropriations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.B Capital Expenditures - Capability and Performance Programs (CAPPrs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.C Capital Expenditures - Bottles and Cases, Including Overages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. IT Investments and Website Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.A Real Property - Acquisitions and Sales or Other Disposals of Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.B Real Property - Donations of Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.C Real Property - Condemnations or Easements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.A Leases - Operating Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.B Leases - Capital Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.A Inventory Adjustments and Disposals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.B Other Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.C Asset Transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.D Asset Disposals (Tangible Assets excluding Real Property and Inventory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.A Treasury - Banking Information Reports (BIR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.B Treasury - External Borrowings and Lines of Credit (RFFs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.C Treasury - Intercompany Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.D Treasury - Loans Third Parties (Including CCFC Target Loan Programs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.E.1 Treasury - Guarantees to Third Parties - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.E.2 Treasury - Guarantees Related to Tax Disputes or Other Matters Involving Governmental Bodies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.F Treasury - Comfort Letters and Other Financial Security Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.G Treasury - Accommodation Purchases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.H Treasury - Credit Terms/Policies or Incentives for Sales to Customers, Bottlers or Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.I.1 Treasury - Exemption from Bad Debt Reserve Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.I.2 Treasury - Write-offs of Uncollectible Accounts Receivable from Bad Debt Reserve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFAGroupApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RFAGroupApprover</description>
        <inlineHelpText>select group name</inlineHelpText>
        <label>RFAGroupApprover</label>
        <referenceTo>RFAGroupApprover__c</referenceTo>
        <relationshipLabel>AutoApproverAssignments</relationshipLabel>
        <relationshipName>AutoApproverAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFARequestAmount_FC__c</fullName>
        <description>stores the Request Amount of RFA</description>
        <label>RFARequestAmount(FC)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>AutoApproverAssignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ProfitCenterName__c</columns>
        <columns>RFADoaCategory__c</columns>
        <columns>RFAGroupApprover__c</columns>
        <columns>RFARequestAmount_FC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AutoApproverAssignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoApproverAssignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>